# jirehs-flashcards

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src-tauri/src/commands/: deck.rs  mod.rs  settings.rs  stats.rs  study.rs  watcher.rs  window.rs
apps/desktop/src-tauri/src/db/: error.rs  mod.rs  repository.rs  schema.rs
apps/desktop/src-tauri/src/watcher/: mod.rs
apps/frontend/: index.html  package.json  prototype.html  tsconfig.json
apps/frontend/src/: App.tsx  styles.css
apps/frontend/src/hooks/: useBrowseSession.test.ts  useBrowseSession.ts  useCommandPalette.ts  useFileWatcher.test.tsx  useFileWatcher.ts  useLocalStorage.ts  usePannable.ts  useSettings.test.tsx  useSettings.ts  useStats.test.tsx  useStats.ts  useStudySession.test.tsx  useStudySession.ts  useToast.ts  useWatcherEvents.test.ts  useWatcherEvents.ts
apps/frontend/src/lib/: tauri.ts
apps/frontend/src/pages/: Browse.tsx  DeckList.test.tsx  DeckList.tsx  Settings.tsx  Stats.tsx  Study.tsx
apps/frontend/src/stores/: appStore.ts  studyStore.test.ts  studyStore.ts  toastStore.ts
apps/frontend/src/test/: factories.ts  (+2 more)
libs/flashcard-core/: Cargo.toml
libs/flashcard-core/src/: error.rs  lib.rs  matching.rs  parser.rs  types.rs
libs/flashcard-core/src/algorithm/: fsrs.rs
libs/shared-types/src/: index.ts
scripts/: bump-version.sh
(+49 files in other folders)
