[package]
name = "flashcard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
thiserror.workspace = true
ts-rs = { version = "10", optional = true, features = ["chrono-impl"] }

[dev-dependencies]
pretty_assertions = "1.4"

[features]
ts-export = ["ts-rs"]
