[package]
name = "jirehs-flashcards-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "jirehs_flashcards_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flashcard-core = { path = "../../../libs/flashcard-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
notify = "6"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSButton",
    "NSControl",
    "NSView",
    "NSWindow",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
